# blob2d-renderer

./: .gitignore  Cargo.toml  NOTES.md  OVERVIEW.md  README.md  Trunk.toml  contributing.md  documentation_standards.md  index.html  readme.md  sw_bootstrap.js  webdriver.json
assets/: readme.md
assets/levels/: mall_parking_lot.wasm
assets/sw/: bvb_sw.js  bvb_sw_bg.wasm  index.html
docs/: architecture.md  development.md  index.md  methodology.md  overview.md  todo.md
levels/bvb_level_parking_lot/: Cargo.toml
levels/bvb_level_parking_lot/src/: lib.rs
scripts/: build_sw.sh  dev_https_cert.sh  dev_https_start.sh  dev_https_stop.sh
src/: lib.rs  shader.wgsl
sw/: Cargo.toml  Trunk.toml  sw.html
sw/src/: lib.rs
tests/: webgl.rs
