[package]
name = "beyond_vs_below"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
qrcodegen = "1.8"
web-sys = { version = "0.3", features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "console",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "EventTarget",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlDivElement",
  "HtmlElement",
  "HtmlImageElement",
  "Location",
  "Node",
  "Navigator",
  "PointerEvent",
  "RegistrationOptions",
  "Response",
  "ServiceWorkerContainer",
  "ServiceWorkerRegistration",
  "Window",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WorkerType",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
