[package]
name = "blob2d-renderer"
version = "0.1.0"
edition = "2021"
description = "Reusable 2D renderer for Blob web apps"
license = "MIT"
repository = "https://github.com/michaelgrilo/blob2d-renderer"

[lib]
name = "blob2d_renderer"
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = { version = "0.11.0", features = ["utils"] }
wgpu = { version = "0.20.1", features = ["wgsl", "webgl"] }

[dependencies.web-sys]
version = "0.3.76"
features = ["HtmlCanvasElement", "Window"]
