[package]
name = "bvb_sw"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
workbox_rs = { path = "../../workbox-rs" }
web-sys = { version = "0.3", features = [
  "Cache",
  "CacheStorage",
  "console",
  "ExtendableEvent",
  "Location",
  "Request",
  "Response",
  "ServiceWorkerGlobalScope",
  "WorkerGlobalScope",
  "WorkerLocation",
  "Url",
] }
